--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
-    "ethers": "^5",
-    "react": "^18.2",
-    "react-dom": "^18.2"
+    "ethers": "^5.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4",
+    "vite-plugin-node-polyfills": "^0.11.0",
+    "zksync-web3": "^0.14.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
-    "vite": "^3",
-    "vite-plugin-node-polyfills": "^0.7.0"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "vite": "^3"
   }
 }
